fix: contrast on main page

--- a/style.css
+++ b/style.css
@@ -651,7 +651,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: rgb(19, 2, 1) !important;
+    color: rgb(253, 253, 253) !important;
 }
 
 .container {
